3822B1PE2/5_block_gemm_omp/chernova_natalia/log.txt
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/5_block_gemm_omp/chernova_natalia/block_gemm_omp.cpp: In function ‘std::vector<float> BlockGemmOMP(const std::vector<float>&, const std::vector<float>&, int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/5_block_gemm_omp/chernova_natalia/block_gemm_omp.cpp:7:33: error: ‘size_t’ does not name a type
    7 |     if (a.size() != static_cast<size_t>(n * n) ||
      |                                 ^~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/5_block_gemm_omp/chernova_natalia/block_gemm_omp.cpp:4:1: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
    3 | #include <omp.h>
  +++ |+#include <cstddef>
    4 | 
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/5_block_gemm_omp/chernova_natalia/block_gemm_omp.cpp:8:33: error: ‘size_t’ does not name a type
    8 |         b.size() != static_cast<size_t>(n * n))
      |                                 ^~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/5_block_gemm_omp/chernova_natalia/block_gemm_omp.cpp:8:33: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/5_block_gemm_omp/chernova_natalia/block_gemm_omp.cpp:33:49: error: ‘j_min’ was not declared in this scope; did you mean ‘k_min’?
   33 |                         for (int j = j_out; j < j_min; j++)
      |                                                 ^~~~~
      |                                                 k_min
